[gd_scene load_steps=25 format=3 uid="uid://dvt7jwu5k1gth"]

[ext_resource type="Script" path="res://Script/Play/parede_amarela.gd" id="1_ittwj"]
[ext_resource type="Script" path="res://Script/Play/clicar_box.gd" id="2_0mjqf"]
[ext_resource type="PackedScene" uid="uid://cq1unn8f3h8b7" path="res://Interface/intro_monologue.tscn" id="2_1v5dy"]
[ext_resource type="Texture2D" uid="uid://dh7pei48pldue" path="res://Asset/Images/Rooms/amarela.png" id="2_7djhk"]
[ext_resource type="Texture2D" uid="uid://c0kpgvr2ldbe5" path="res://Asset/Images/Buttons/Left/left_buttton.png" id="3_e1xkg"]
[ext_resource type="Script" path="res://Script/Play/buttons_ui.gd" id="4_pnbyy"]
[ext_resource type="Texture2D" uid="uid://c5i2tdf75ad4e" path="res://Asset/Images/Buttons/Right/right_button.png" id="4_r1ucr"]
[ext_resource type="PackedScene" uid="uid://bh0mxh6j84uyu" path="res://Interface/Menu/pause_menu.tscn" id="4_rawdv"]
[ext_resource type="Texture2D" uid="uid://ci3uqohia53l0" path="res://Asset/Images/Buttons/Up/up_button.png" id="5_ajafe"]
[ext_resource type="Texture2D" uid="uid://nvy7vswb4nlv" path="res://Asset/Images/Buttons/Left/left_buttton_pressed.png" id="6_38vdg"]
[ext_resource type="Texture2D" uid="uid://nptenjqy6sec" path="res://Asset/Images/Buttons/Left/left_buttton_hover.png" id="7_y2w4x"]
[ext_resource type="Texture2D" uid="uid://cq3vkaqbwoc2d" path="res://Asset/Images/Buttons/Settings/settings_button.png" id="8_mil3b"]
[ext_resource type="Texture2D" uid="uid://b6eyqkdbrivjh" path="res://Asset/Images/Buttons/Right/right_button_pressed.png" id="10_ht6f4"]
[ext_resource type="Texture2D" uid="uid://ce0yf13hjuy21" path="res://Asset/Images/Buttons/Right/right_button_hover.png" id="11_bejbu"]
[ext_resource type="PackedScene" uid="uid://dkxppq23ra6tb" path="res://Interface/tutorial.tscn" id="12_d1itp"]
[ext_resource type="Texture2D" uid="uid://d3vqtuhyq8im2" path="res://Asset/Images/Buttons/Up/up_button_pressed.png" id="14_i5q35"]
[ext_resource type="Texture2D" uid="uid://6lvaa1symvbp" path="res://Asset/Images/Buttons/Up/up_button_hover.png" id="15_t3n5t"]
[ext_resource type="Texture2D" uid="uid://c5iaoqhs7qxim" path="res://Asset/Images/Buttons/Down/down_button.png" id="17_qs8v8"]
[ext_resource type="Texture2D" uid="uid://bimjqy7ador4j" path="res://Asset/Images/Buttons/Settings/settings_button_pressed.png" id="18_5jmd7"]
[ext_resource type="Texture2D" uid="uid://mnkr0it3uu7" path="res://Asset/Images/Buttons/Down/down_button_pressed.png" id="18_tckww"]
[ext_resource type="Texture2D" uid="uid://dkg4xq1n4p871" path="res://Asset/Images/Buttons/Down/down_button_hover.png" id="19_4cayj"]
[ext_resource type="Texture2D" uid="uid://coetpa8lufxrr" path="res://Asset/Images/Buttons/Settings/settings_button_hover.png" id="19_5711g"]
[ext_resource type="AudioStream" uid="uid://er5tuxmt7cgf" path="res://Asset/Audio/Effects/Menu_Hover_Sound.mp3" id="23_ldprf"]
[ext_resource type="AudioStream" uid="uid://dumxnki43scgh" path="res://Asset/Audio/Effects/Menu_Click_Sound.mp3" id="24_0sbyt"]

[node name="ParedeAmarela" type="Control" node_paths=PackedStringArray("parede_amarela", "sala", "intro_monologue", "pause_menu", "tutorial")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ittwj")
parede_amarela = NodePath(".")
sala = NodePath(".")
intro_monologue = NodePath("IntroMonologue")
pause_menu = NodePath("PauseMenu")
tutorial = NodePath("Tutorial")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_7djhk")

[node name="Blocos de Ação" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_0mjqf")

[node name="A_P_Amarela" type="ColorRect" parent="Blocos de Ação"]
layout_mode = 0
offset_left = 34.0
offset_top = 3.0
offset_right = 1885.0
offset_bottom = 958.0
color = Color(1, 1, 1, 0)

[node name="A_Porta" type="ColorRect" parent="Blocos de Ação"]
layout_mode = 0
offset_left = 240.0
offset_top = 144.0
offset_right = 675.0
offset_bottom = 963.0
color = Color(1, 1, 1, 0)

[node name="Botões UI" type="Control" parent="." node_paths=PackedStringArray("left_button", "right_button", "up_button", "down_button", "pause_menu", "sala", "menu_click", "menu_hover")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_pnbyy")
left_button = NodePath("Left_button")
right_button = NodePath("Right_button")
up_button = NodePath("Up_button")
down_button = NodePath("Down_button")
pause_menu = NodePath("../PauseMenu")
sala = NodePath("..")
menu_click = NodePath("../s_menu_click")
menu_hover = NodePath("../s_menu_hover")

[node name="Left_button" type="TextureButton" parent="Botões UI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 64.0
grow_vertical = 2
texture_normal = ExtResource("3_e1xkg")
texture_pressed = ExtResource("6_38vdg")
texture_hover = ExtResource("7_y2w4x")
stretch_mode = 3

[node name="Right_button" type="TextureButton" parent="Botões UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("4_r1ucr")
texture_pressed = ExtResource("10_ht6f4")
texture_hover = ExtResource("11_bejbu")
stretch_mode = 3

[node name="Up_button" type="TextureButton" parent="Botões UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
texture_normal = ExtResource("5_ajafe")
texture_pressed = ExtResource("14_i5q35")
texture_hover = ExtResource("15_t3n5t")
stretch_mode = 3

[node name="Down_button" type="TextureButton" parent="Botões UI"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("17_qs8v8")
texture_pressed = ExtResource("18_tckww")
texture_hover = ExtResource("19_4cayj")
stretch_mode = 3

[node name="Settings_button" type="TextureButton" parent="Botões UI"]
layout_mode = 0
offset_left = 1787.0
offset_top = 43.0
offset_right = 1882.0
offset_bottom = 140.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("8_mil3b")
texture_pressed = ExtResource("18_5jmd7")
texture_hover = ExtResource("19_5711g")

[node name="IntroMonologue" parent="." instance=ExtResource("2_1v5dy")]
visible = false
layout_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("4_rawdv")]
visible = false
layout_mode = 1
size_flags_horizontal = 4

[node name="Tutorial" parent="." instance=ExtResource("12_d1itp")]
visible = false
layout_mode = 1

[node name="s_menu_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_0sbyt")
bus = &"Sfx"

[node name="s_menu_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_ldprf")
volume_db = -12.0
bus = &"Sfx"

[connection signal="gui_input" from="Blocos de Ação/A_P_Amarela" to="Blocos de Ação" method="_on_gui_input" binds= ["parede_amarela"]]
[connection signal="gui_input" from="Blocos de Ação/A_Porta" to="Blocos de Ação" method="_on_gui_input" binds= ["porta"]]
[connection signal="pressed" from="Botões UI/Left_button" to="Botões UI" method="_on_pressed" binds= ["esquerda"]]
[connection signal="pressed" from="Botões UI/Right_button" to="Botões UI" method="_on_pressed" binds= ["direita"]]
[connection signal="pressed" from="Botões UI/Up_button" to="Botões UI" method="_on_pressed" binds= ["cima"]]
[connection signal="pressed" from="Botões UI/Down_button" to="Botões UI" method="_on_pressed" binds= ["baixo"]]
[connection signal="mouse_entered" from="Botões UI/Settings_button" to="Botões UI" method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="Botões UI/Settings_button" to="Botões UI" method="_on_settings_button_pressed"]
